--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
 spring:
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: virtus
+  profiles:
+    active: ${APP_PROFILE:dev}
